Added buttons & styled to look like a Simon Game.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet", type="text/css" href="styles.css">
 </head>
 <body>
-<h1>Simon Game</h1>
 
+<h1>Level 1</h1>
+
+<div class="container">
+    <div class="row">
+        <button class="btn" id="green"></button>
+        <button class="btn" id="red"></button>
+    </div>
+    <div class="row">
+        <button class="btn" id="yellow"></button>
+        <button class="btn" id="blue"></button>
+    </div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="index.js"></script>
