Added a handler function

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <div class="container">
     <div class="row">
-        <button class="btn" id="green"></button>
-        <button class="btn" id="red"></button>
+        <button class="btn green" id="green"></button>
+        <button class="btn red" id="red"></button>
     </div>
     <div class="row">
-        <button class="btn" id="yellow"></button>
-        <button class="btn" id="blue"></button>
+        <button class="btn yellow" id="yellow"></button>
+        <button class="btn blue" id="blue"></button>
     </div>
 </div>
 
